--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,6 +1,7 @@
 @import "fonts"
 @import "libs"
 @import "vars"
+@import "effect"
 
 *::-webkit-input-placeholder
 	color: #666
@@ -365,10 +366,7 @@ html.mm-opened
 .particles-js-canvas-el
 	position: absolute
 
-$colors: $blue, $red, $accent
-@for $i from 1 through length($colors)
-	.carousel-work .owl-item:nth-child(#{length($colors)}n+#{$i})
-		background-color: nth($colors, $i)
+
 
 .carousel-work
 	background-color: $dark
@@ -397,12 +395,13 @@ $colors: $blue, $red, $accent
 	&-image
 		background-size: cover
 		background-position: center
-		opacity: .7
-		transition: opacity .5s ease
+		&:hover
+			opacity: .10
+			transition: opacity .5s ease
 
 	&-content
 		position: relative
-		padding: 60px 10%
+		
 
 	&-composition
 		margin: auto
@@ -863,5 +862,125 @@ select
 		margin: 0
 		font-size: 30px
 		color: #fff
+
+.change
+	height: 500px
+	.col-sm-6
+		padding: 0
+		margin: 0
+	.bk
+		padding: 0
+		margin: 0
+		height: 500px
+		background-color: #e77956
+		img
+			width: 100%
+			height: 500px
+		&::before
+			content: ''
+			width: 100%
+			right: 0
+			height: 100%
+			position: absolute
+			background-color: rgba($accent, .90)
+		h1
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 300px
+		p
+			position: absolute
+			color: #fff
+			z-index: 2
+			width: 600px
+			left: 150px
+			top: 100px
+		.button2
+			position: absolute
+			top: 300px
+			left: 300px
+			font-size: 1.5em
+			text-decoration: none
+			border: 3px solid #fff
+			padding: .7em 1.5em
+			color: #fff
+	
+	.ak
+		padding: 0
+		margin: 0
+		height: 500px
+		img
+			width: 100%
+		&::before
+			content: ''
+			width: 100%
+			right: 0
+			height: 100%
+			position: absolute
+			background-color: rgba(white, .90)
+		h1
+			position: absolute
+			color: #333
+			z-index: 2
+			left: 300px
+		p
+			position: absolute
+			color: #333
+			z-index: 2
+			width: 600px
+			left: 150px
+			top: 100px
+		.button1
+			position: absolute
+			top: 300px
+			left: 300px
+			font-size: 1.5em
+			text-decoration: none
+			border: 3px solid #333
+			padding: .7em 1.5em
+			color: #333
+
+.log
+	img
+		width: 20%
+.welcome2
+	p
+		font-size: 24px
+		text-transform: uppercase
+		display: flex
+		align-items: center
+		white-space: nowrap
+		margin: 0
+		margin-bottom: -10px
+		color: #333
+		span
+			margin: 0 10px
+		&::before, &::after
+			content: ''
+			height: 1px
+			width: 100%
+			position: relative
+			background-color: #333
+			display: inline-block
+	.h1
+		font-weight: 100
+		font-size: 80px
+		margin: 0
+		line-height: 1.6
+		border-bottom: 1px solid #333
+		white-space: nowrap
+		color: #333
+	strong
+		display: block
+		text-transform: uppercase
+		font-size: 17px
+		margin-top: 25px
+		.fa
+			margin-right: 10px
+			font-size: 12px
+			color: #555
+			&:last-child
+				margin-right: inherit
+				margin-left: 10px
 
 @import "media" // Всегда в конце
