--- a/app/sass/_effect.sass
+++ b/app/sass/_effect.sass
@@ -60,6 +60,8 @@ $black_60: rgba(0,0,0,0.6)
 			//If you use compass, instead of the line below you could use + transition-delay($delay-1, $delay-2, $delay-3, $delay-4, $delay-5, $delay-6, $delay-7, $delay-8, $delay-9, $delay-10)
 			transition-delay: 0.3s
 			padding-left: 40px
+			color: #fff
+			weight: 700
 
 
 	a.info 
@@ -67,3 +69,5 @@ $black_60: rgba(0,0,0,0.6)
 		transform: translateY(-200px)
 		//If you use compass, instead of the line below you could use + transition($transition-1, $transition-2, $transition-3, $transition-4, $transition-5, $transition-6, $transition-7, $transition-8, $transition-9, $transition-10)
 		transition: all 0.2s ease-in-out
+		color: #fff
+		weight: 700
