--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1565,6 +1565,90 @@ select
 			right: 15%
 			&:hover
 				transform: skew(-20deg, 20deg)
+	.por1
+		height: 500px
+		background-color: #f6903e
+		h1
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 20%
+		p
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 30%
+			font-size: 1.5em
+	
+	.por2
+		height: 500px
+		background-color: #f6903e
+		img
+			width: 100%
+			position: absolute
+			top: 15%
+			right: 15%
+			left: 5%
+			&:hover
+				transform: skew(-20deg, 20deg)
+
+	.por3
+		padding: 0
+		margin: 0
+		height: 500px
+		background-color: #70afb6
+		img
+			width: 80%
+			position: absolute
+			top: 15%
+			left: 15%
+	.por4
+		padding: 0
+		margin: 0
+		height: 500px
+		background-color: #70afb6
+		h1
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 20%
+		p
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 30%
+			font-size: 1.5em
+	.por5
+		height: 500px
+		background-color: #2e4adb
+		h1
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 20%
+		p
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 30%
+			font-size: 1.5em
+	
+	.por6
+		height: 500px
+		background-color: #2e4adb
+		img
+			width: 80%
+			position: absolute
+			top: 5%
+			right: 15%
+			&:hover
+				transform: skew(-20deg, 20deg)
 .sub-cent
 	width: 350px
 
