--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1253,6 +1253,72 @@ select
 			&:hover
 				background-color: #FFF
 				color: #ed823b
+	.ye5
+		padding: 0
+		margin: 0
+		height: 500px
+		background-color: #d13c3c
+		img
+			width: 30%
+			position: absolute
+			top: 45%
+			left: 55%
+		h1
+			position: absolute
+			color: #FFF
+			z-index: 2
+			left: 10%
+		p
+			position: absolute
+			color: #FFF
+			z-index: 2
+			left: 10%
+			top: 10%
+		.button9
+			position: absolute
+			top: 40%
+			left: 10%
+			font-size: 1.5em
+			text-decoration: none
+			border: 3px solid #FFF
+			padding: .7em 1.5em
+			color: #fff
+			&:hover
+				background-color: #FFF
+				color: #d13c3c
+	.ye6
+		padding: 0
+		margin: 0
+		height: 500px
+		background-color: #d1c73c
+		img
+			width: 30%
+			position: absolute
+			top: 40%
+			left: 55%
+		h1
+			position: absolute
+			color: #FFF
+			z-index: 2
+			left: 10%
+		p
+			position: absolute
+			color: #FFF
+			z-index: 2
+			left: 10%
+			top: 10%
+		.button10
+			position: absolute
+			top: 40%
+			left: 10%
+			font-size: 1.5em
+			text-decoration: none
+			border: 3px solid #FFF
+			padding: .7em 1.5em
+			color: #fff
+			&:hover
+				background-color: #FFF
+				color: #d1c73c
 
 /*конец*/
 
@@ -1642,6 +1708,174 @@ select
 	.por6
 		height: 500px
 		background-color: #2e4adb
+		img
+			width: 80%
+			position: absolute
+			top: 5%
+			right: 15%
+			&:hover
+				transform: skew(-20deg, 20deg)
+	.mk1
+		height: 500px
+		background-color: #5aa3ce
+		h1
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 20%
+		p
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 30%
+			font-size: 1.5em
+	
+	.mk2
+		height: 500px
+		background-color: #5aa3ce
+		img
+			width: 100%
+			position: absolute
+			top: 15%
+			right: 25%
+			left: 1%
+			&:hover
+				transform: skew(-20deg, 20deg)
+
+	.mk3
+		padding: 0
+		margin: 0
+		height: 500px
+		background-color: #32bea6
+		img
+			width: 80%
+			position: absolute
+			top: 5%
+			left: 15%
+	.mk4
+		padding: 0
+		margin: 0
+		height: 500px
+		background-color: #32bea6
+		h1
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 20%
+		p
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 30%
+			font-size: 1.5em
+	.mk5
+		height: 500px
+		background-color: #575c6f
+		h1
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 20%
+		p
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 30%
+			font-size: 1.5em
+	
+	.mk6
+		height: 500px
+		background-color: #575c6f
+		img
+			width: 80%
+			position: absolute
+			top: 5%
+			right: 15%
+			&:hover
+				transform: skew(-20deg, 20deg)
+	.kt1
+		height: 500px
+		background-color: #3ea832
+		h1
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 20%
+		p
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 30%
+			font-size: 1.5em
+	
+	.kt2
+		height: 500px
+		background-color: #3ea832
+		img
+			width: 60%
+			position: absolute
+			top: 15%
+			right: 25%
+			left: 10%
+			&:hover
+				transform: skew(-20deg, 20deg)
+
+	.kt3
+		padding: 0
+		margin: 0
+		height: 500px
+		background-color: #e25f5f
+		img
+			width: 80%
+			position: absolute
+			top: 5%
+			left: 15%
+	.kt4
+		padding: 0
+		margin: 0
+		height: 500px
+		background-color: #e25f5f
+		h1
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 20%
+		p
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 30%
+			font-size: 1.5em
+	.kt5
+		height: 500px
+		background-color: #232187
+		h1
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 20%
+		p
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 30%
+			font-size: 1.5em
+	
+	.kt6
+		height: 500px
+		background-color: #232187
 		img
 			width: 80%
 			position: absolute
