--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1883,6 +1883,342 @@ select
 			right: 15%
 			&:hover
 				transform: skew(-20deg, 20deg)
+	.smm1
+		height: 500px
+		background-color: #30aab7
+		h1
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 20%
+		p
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 30%
+			font-size: 1.5em
+	
+	.smm2
+		height: 500px
+		background-color: #30aab7
+		img
+			width: 60%
+			position: absolute
+			top: 15%
+			right: 25%
+			left: 10%
+			&:hover
+				transform: skew(-20deg, 20deg)
+
+	.smm3
+		padding: 0
+		margin: 0
+		height: 500px
+		background-color: #feae0f
+		img
+			width: 80%
+			position: absolute
+			top: 15%
+			left: 15%
+	.smm4
+		padding: 0
+		margin: 0
+		height: 500px
+		background-color: #feae0f
+		h1
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 20%
+		p
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 30%
+			font-size: 1.5em
+	.smm5
+		height: 500px
+		background-color: #a53ba0
+		h1
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 20%
+		p
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 30%
+			font-size: 1.5em
+	
+	.smm6
+		height: 500px
+		background-color: #a53ba0
+		img
+			width: 80%
+			position: absolute
+			top: 5%
+			right: 15%
+			&:hover
+				transform: skew(-20deg, 20deg)
+	.seo1
+		height: 500px
+		background-color: #3c3aa5
+		h1
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 20%
+		p
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 30%
+			font-size: 1.5em
+	
+	.seo2
+		height: 500px
+		background-color: #3c3aa5
+		img
+			width: 60%
+			position: absolute
+			top: 15%
+			right: 25%
+			left: 10%
+			&:hover
+				transform: skew(-20deg, 20deg)
+
+	.seo3
+		padding: 0
+		margin: 0
+		height: 500px
+		background-color: #e04f4f
+		img
+			width: 80%
+			position: absolute
+			top: 5%
+			left: 15%
+	.seo4
+		padding: 0
+		margin: 0
+		height: 500px
+		background-color: #e04f4f
+		h1
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 20%
+		p
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 30%
+			font-size: 1.5em
+	.seo5
+		height: 500px
+		background-color: #a53ba0
+		h1
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 20%
+		p
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 30%
+			font-size: 1.5em
+	
+	.seo6
+		height: 500px
+		background-color: #a53ba0
+		img
+			width: 80%
+			position: absolute
+			top: 5%
+			right: 15%
+			&:hover
+				transform: skew(-20deg, 20deg)
+	.bu1
+		height: 500px
+		background-color: #46a35a
+		h1
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 20%
+		p
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 30%
+			font-size: 1.5em
+	
+	.bu2
+		height: 500px
+		background-color: #46a35a
+		img
+			width: 60%
+			position: absolute
+			top: 15%
+			right: 25%
+			left: 10%
+			&:hover
+				transform: skew(-20deg, 20deg)
+
+	.bu3
+		padding: 0
+		margin: 0
+		height: 500px
+		background-color: #4494b7
+		img
+			width: 80%
+			position: absolute
+			top: 5%
+			left: 15%
+	.bu4
+		padding: 0
+		margin: 0
+		height: 500px
+		background-color: #4494b7
+		h1
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 20%
+		p
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 30%
+			font-size: 1.5em
+	.bu5
+		height: 500px
+		background-color: #a53ba0
+		h1
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 20%
+		p
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 30%
+			font-size: 1.5em
+	
+	.bu6
+		height: 500px
+		background-color: #a53ba0
+		img
+			width: 80%
+			position: absolute
+			top: 5%
+			right: 15%
+			&:hover
+				transform: skew(-20deg, 20deg)
+	.sup1
+		height: 500px
+		background-color: #ff4b68
+		h1
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 20%
+		p
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 30%
+			font-size: 1.5em
+	
+	.sup2
+		height: 500px
+		background-color: #ff4b68
+		img
+			width: 80%
+			position: absolute
+			top: 15%
+			right: 25%
+			left: 10%
+			&:hover
+				transform: skew(-20deg, 20deg)
+
+	.sup3
+		padding: 0
+		margin: 0
+		height: 500px
+		background-color: #4494b7
+		img
+			width: 80%
+			position: absolute
+			top: 25%
+			left: 15%
+	.sup4
+		padding: 0
+		margin: 0
+		height: 500px
+		background-color: #4494b7
+		h1
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 20%
+		p
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 30%
+			font-size: 1.5em
+	.sup5
+		height: 500px
+		background-color: #48ba46
+		h1
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 20%
+		p
+			position: absolute
+			color: #fff
+			z-index: 2
+			left: 10%
+			top: 30%
+			font-size: 1.5em
+	
+	.sup6
+		height: 500px
+		background-color: #48ba46
+		img
+			width: 80%
+			position: absolute
+			top: 5%
+			right: 15%
+			&:hover
+				transform: skew(-20deg, 20deg)
 .sub-cent
 	width: 350px
 
