--- a/app/sass/_team.sass
+++ b/app/sass/_team.sass
@@ -53,7 +53,7 @@ $font_2: sans-serif
 	background-size: cover
 	margin-top: 20%
 .ch-img-3
-	background-image: url(../img/project/man/s.png) 
+	background-image: url(../img/project/man/p.png) 
 	height: 300px
 	width: 300px
 	background-position-x: center
