--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -130,6 +130,12 @@
 			.button1
 				top: 84%
 
+	.welcome2
+		p
+			font-size: 12px
+		h1
+			font-size: 12px
+
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
 	.welcome
