--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -723,6 +723,40 @@ select
 			&.owl-next
 				right: -60px
 
+.partnerss
+	margin-left: 30px
+	.partner
+		height: 100%
+		display: flex
+		margin: auto
+	.owl-stage
+		display: flex
+	.owl-item
+		margin-top: 30px
+		img
+			max-width: 50%
+			width: auto
+			display: inline-block
+			margin: auto
+	.owl-nav
+		position: absolute
+		top: 0
+		width: 100%
+		z-index: 2
+		> div
+			position: absolute
+			top: 80px
+			color: #999
+			font-size: 40px
+			transition: opasity .5s ease
+			padding: 0 10px
+			&:hover
+				opacity: .6
+			&.owl-prev
+				left: -50px
+			&.owl-next
+				right: -50px
+
 .workers
 	.worker
 		&-img
@@ -1349,45 +1383,6 @@ select
 
 .log
 	height: 150px
-.welcome2
-	p
-		font-size: 24px
-		text-transform: uppercase
-		display: flex
-		align-items: center
-		white-space: nowrap
-		margin: 0
-		margin-bottom: -10px
-		color: #333
-		span
-			margin: 0 10px
-		&::before, &::after
-			content: ''
-			height: 1px
-			width: 100%
-			position: relative
-			background-color: #333
-			display: inline-block
-	.h1
-		font-weight: 100
-		font-size: 80px
-		margin: 0
-		line-height: 1.6
-		border-bottom: 1px solid #333
-		white-space: nowrap
-		color: #333
-	strong
-		display: block
-		text-transform: uppercase
-		font-size: 17px
-		margin-top: 25px
-		.fa
-			margin-right: 10px
-			font-size: 12px
-			color: #555
-			&:last-child
-				margin-right: inherit
-				margin-left: 10px
 .kat1
 	background-color: #fff
 	height: 500px
@@ -1755,7 +1750,7 @@ select
 			left: 10%
 			top: 30%
 			font-size: 1.5em
-	
+
 	.mk2
 		height: 500px
 		background-color: #5aa3ce
@@ -1812,7 +1807,7 @@ select
 			left: 10%
 			top: 30%
 			font-size: 1.5em
-	
+
 	.mk6
 		height: 500px
 		background-color: #575c6f
@@ -1839,7 +1834,7 @@ select
 			left: 10%
 			top: 30%
 			font-size: 1.5em
-	
+
 	.kt2
 		height: 500px
 		background-color: #3ea832
@@ -1896,7 +1891,7 @@ select
 			left: 10%
 			top: 30%
 			font-size: 1.5em
-	
+
 	.kt6
 		height: 500px
 		background-color: #232187
@@ -1923,7 +1918,7 @@ select
 			left: 10%
 			top: 30%
 			font-size: 1.5em
-	
+
 	.smm2
 		height: 500px
 		background-color: #30aab7
@@ -1980,7 +1975,7 @@ select
 			left: 10%
 			top: 30%
 			font-size: 1.5em
-	
+
 	.smm6
 		height: 500px
 		background-color: #a53ba0
@@ -2007,7 +2002,7 @@ select
 			left: 10%
 			top: 30%
 			font-size: 1.5em
-	
+
 	.seo2
 		height: 500px
 		background-color: #3c3aa5
@@ -2064,7 +2059,7 @@ select
 			left: 10%
 			top: 30%
 			font-size: 1.5em
-	
+
 	.seo6
 		height: 500px
 		background-color: #a53ba0
@@ -2091,7 +2086,7 @@ select
 			left: 10%
 			top: 30%
 			font-size: 1.5em
-	
+
 	.bu2
 		height: 500px
 		background-color: #46a35a
@@ -2148,7 +2143,7 @@ select
 			left: 10%
 			top: 30%
 			font-size: 1.5em
-	
+
 	.bu6
 		height: 500px
 		background-color: #a53ba0
@@ -2175,7 +2170,7 @@ select
 			left: 10%
 			top: 30%
 			font-size: 1.5em
-	
+
 	.sup2
 		height: 500px
 		background-color: #ff4b68
@@ -2232,7 +2227,7 @@ select
 			left: 10%
 			top: 30%
 			font-size: 1.5em
-	
+
 	.sup6
 		height: 500px
 		background-color: #48ba46
@@ -2255,10 +2250,15 @@ select
 		opacity: 1
 		background-color: rgba($dark, .80)
 
+
 .mask1
 	position: absolute
 	bottom: 50px
 	left: 30px
+	opacity: 0
+	&:hover
+		opacity: 1
+		background-color: rgba($dark, .80)
 
 
 @import "media" // Всегда в конце
