--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -44,7 +44,7 @@
 
 	.s-call
 		&::before
-			width: 100%
+			width: 50%
 		.callback
 			padding: 12% 0
 
@@ -66,6 +66,74 @@
 			height: 600px
 			.button1
 				top: 80%
+	.yes
+		.ye1
+			height: 300px
+			p
+				padding-top: 60px
+			h1
+				line-height: 30px
+			img
+				width: 20%
+				margin-left: 20%
+				padding-top: 20px
+			.button5
+				margin-top: 55px
+		.ye2
+			height: 300px
+			p
+				padding-top: 60px
+			h1
+				line-height: 30px
+			img
+				width: 30%
+				margin-left: 20%
+
+			.button6
+				margin-top: 55px
+		.ye3
+			height: 300px
+			p
+				padding-top: 60px
+			img
+				width: 40%
+				margin-left: 10%
+				padding-top: 35px
+			.button7
+				margin-top: 55px
+		.ye4
+			height: 300px
+			p
+				padding-top: 60px
+			img
+				width: 40%
+				margin-left: 10%
+			.button8
+				margin-top: 55px
+		.ye5
+			height: 300px
+			p
+				padding-top: 60px
+			h1
+				line-height: 30px
+			img
+				width: 30%
+				margin-left: 10%
+			.button9
+				margin-top: 50px
+		.ye6
+			height: 300px
+			p
+				padding-top: 50px
+			img
+				width: 30%
+				margin-left: 10%
+				padding-top: 20px
+			h1
+				line-height: 30px
+			.button10
+				margin-top: 75px
+
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
@@ -108,6 +176,63 @@
 			.button1
 				top: 85%
 				left: 22%
+	.yes
+		.ye1
+			height: 300px
+			p
+				padding-top: 60px
+			h1
+				line-height: 30px
+			img
+				display: none
+			.button5
+				margin-top: 55px
+		.ye2
+			height: 300px
+			p
+				padding-top: 60px
+			h1
+				line-height: 30px
+			img
+				display: none
+			.button6
+				margin-top: 55px
+		.ye3
+			height: 300px
+			p
+				padding-top: 60px
+			img
+				display: none
+			.button7
+				margin-top: 55px
+		.ye4
+			height: 300px
+			p
+				padding-top: 60px
+			img
+				display: none
+			.button8
+				margin-top: 55px
+		.ye5
+			height: 300px
+			p
+				padding-top: 60px
+			h1
+				line-height: 30px
+			img
+				display: none
+			.button9
+				margin-top: 50px
+		.ye6
+			height: 300px
+			p
+				padding-top: 50px
+			img
+				display: none
+			h1
+				line-height: 30px
+			.button10
+				margin-top: 75px
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
@@ -118,6 +243,11 @@
 		p
 			span
 				font-size: 10px
+	.s-call
+		&::before
+			width: 100%
+		.callback
+			padding: 12% 0
 
 	.change
 		height: 1140px
@@ -136,6 +266,62 @@
 		h1
 			font-size: 12px
 
+	.yes
+		.ye1
+			height: 300px
+			p
+				padding-top: 60px
+			h1
+				line-height: 30px
+			img
+				display: none
+			.button5
+				margin-top: 55px
+		.ye2
+			height: 300px
+			p
+				padding-top: 60px
+			h1
+				line-height: 30px
+			img
+				display: none
+			.button6
+				margin-top: 55px
+		.ye3
+			height: 300px
+			p
+				padding-top: 60px
+			img
+				display: none
+			.button7
+				margin-top: 55px
+		.ye4
+			height: 300px
+			p
+				padding-top: 60px
+			img
+				display: none
+			.button8
+				margin-top: 55px
+		.ye5
+			height: 300px
+			p
+				padding-top: 60px
+			h1
+				line-height: 30px
+			img
+				display: none
+			.button9
+				margin-top: 50px
+		.ye6
+			height: 300px
+			p
+				padding-top: 50px
+			img
+				display: none
+			.button10
+				margin-top: 75px
+
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
 	.welcome
@@ -145,6 +331,16 @@
 		p
 			span
 				font-size: 7px
+	.t-b
+		width: 95%
+		font-size: 0.5em
+		margin-right: 50%
+		padding: 15px
+	.s-call
+		&::before
+			width: 100%
+		.callback
+			padding: 12% 0
 
 	.header-composition
 		p
@@ -153,6 +349,65 @@
 	.change
 		p
 			font-size: 13px
+	.header-composition
+		.button
+			margin-top: 100px
+	.yes
+		.ye1
+			height: 300px
+			p
+				padding-top: 60px
+			h1
+				line-height: 30px
+			img
+				display: none
+			.button5
+				margin-top: 55px
+		.ye2
+			height: 300px
+			p
+				padding-top: 60px
+			h1
+				line-height: 30px
+			img
+				display: none
+			.button6
+				margin-top: 55px
+		.ye3
+			height: 300px
+			p
+				padding-top: 60px
+			img
+				display: none
+			.button7
+				margin-top: 55px
+		.ye4
+			height: 300px
+			p
+				padding-top: 60px
+			img
+				display: none
+			.button8
+				margin-top: 55px
+		.ye5
+			height: 300px
+			p
+				padding-top: 60px
+			h1
+				line-height: 30px
+			img
+				display: none
+			.button9
+				margin-top: 50px
+		.ye6
+			height: 300px
+			p
+				padding-top: 50px
+			img
+				display: none
+			.button10
+				margin-top: 75px
+
 
 
 
