--- a/app/sass/_team.sass
+++ b/app/sass/_team.sass
@@ -17,7 +17,7 @@ $font_2: sans-serif
 
 //urls
 
-.ch-item 
+.ch-item
 	width: 100%
 	height: 100%
 	//If you use compass, instead of the line below you could use + border-radius($radius, $vertical-radius)
@@ -28,15 +28,15 @@ $font_2: sans-serif
 	box-shadow: inset 0 0 0 0 $color_crail_40_approx, inset 0 0 0 16px $white_60, 0 1px 2px $black_10
 	//If you use compass, instead of the line below you could use + transition($transition-1, $transition-2, $transition-3, $transition-4, $transition-5, $transition-6, $transition-7, $transition-8, $transition-9, $transition-10)
 	transition: all 0.4s ease-in-out
-	&:hover 
+	&:hover
 		//If you use compass, instead of the line below you could use + box-shadow($shadow-1, $shadow-2, $shadow-3, $shadow-4, $shadow-5, $shadow-6, $shadow-7, $shadow-8, $shadow-9, $shadow-10)
 		box-shadow: inset 0 0 0 310px $color_crail_40_approx, inset 0 0 0 16px $white_80, 0 1px 2px $black_10
-		.ch-info 
+		.ch-info
 			opacity: 1
 			//If you use compass, instead of the line below you could use + transform($scale, $rotate, $transx, $transy, $skewx, $skewy, $originx, $originy)
 			transform: scale(1)
 .ch-img-1
-	background-image: url(../img/project/man/a.png) 
+	background-image: url(../img/project/man/a.png)
 	height: 300px
 	width: 300px
 	background-position-x: center
@@ -45,7 +45,7 @@ $font_2: sans-serif
 	margin-top: 20%
 
 .ch-img-2
-	background-image: url(../img/project/man/s.png) 
+	background-image: url(../img/project/man/s.png)
 	height: 300px
 	width: 300px
 	background-position-x: center
@@ -53,7 +53,15 @@ $font_2: sans-serif
 	background-size: cover
 	margin-top: 20%
 .ch-img-3
-	background-image: url(../img/project/man/p.png) 
+	background-image: url(../img/project/man/p.png)
+	height: 300px
+	width: 300px
+	background-position-x: center
+	background-position-y: 50%
+	background-size: cover
+	margin-top: 20%
+.ch-img-4
+	background-image: url(../img/project/man/st.png) 
 	height: 300px
 	width: 300px
 	background-position-x: center
@@ -62,7 +70,7 @@ $font_2: sans-serif
 	margin-top: 20%
 
 
-.ch-info 
+.ch-info
 	position: absolute
 	width: 100%
 	height: 100%
@@ -73,7 +81,7 @@ $font_2: sans-serif
 	transition: all 0.4s ease-in-out
 	//If you use compass, instead of the line below you could use + transform($scale, $rotate, $transx, $transy, $skewx, $skewy, $originx, $originy)
 	transform: scale(0)
-	h3 
+	h3
 		color: $white
 		text-transform: uppercase
 		position: relative
@@ -86,14 +94,14 @@ $font_2: sans-serif
 		//If you use compass, instead of the line below you could use + text-shadow($shadow-1, $shadow-2, $shadow-3, $shadow-4, $shadow-5, $shadow-6, $shadow-7, $shadow-8, $shadow-9, $shadow-10)
 		text-shadow: 0 0 1px $white, 0 1px 2px $black_30
 
-	p 
+	p
 		color: $white
 		padding: 10px 5px
 		font-style: italic
 		margin: 0 30px
 		font-size: 12px
 		border-top: 1px solid $white_50
-		a 
+		a
 			display: block
 			color: $white
 			color: $white_70
@@ -104,7 +112,6 @@ $font_2: sans-serif
 			letter-spacing: 1px
 			padding-top: 4px
 			font-family: $font_0, $font_1, $font_2
-			&:hover 
+			&:hover
 				color: $color_broom_approx
 				color: $color_broom_80_approx
-	
